<resources>
    <string name="app_name">SPARKLE</string>
    <string name="binding_error">에러가 발생했습니다</string>
    <string name="sparkle_logo">sparkle_logo</string>
    <string name="on_boarding_skip">건너뛰기</string>
    <string name="on_boarding_start">시작하기</string>
    <string name="mission_detatil_create_title">미션 카테고리 설명</string>
    <string name="mission_detatil_create_game_title">내 연인의 모든것</string>
    <string name="mission_detatil_create_game_description">상대의 취향, 신체 사이즈 등 제시된 주제에 대한 답을 맞추며 서로를 알아가는 게임</string>
    <string name="mission_detatil_create_rule_title">룰 소개</string>
    <string name="mission_detatil_create_rule_description">1. 본인에게 할당된 주제의 답변을 상대방이 맞춰야하는 게임입니다. 2. 단순 주제가 나와있는 미션이라면, 상대의 입장에서 해당 주제에 대한 답을 해주세요. 3. 2지선다로 이루어진 미션이라면, 상대가 어떤 선지를 더 좋아할지에 대해 예상하여 답을 해주세요.</string>
    <string name="mission_detatil_create_tip_title">공략 팁</string>
    <string name="mission_detatil_create_tip_description">• 평소에 하나씩 연인에 대한 셀프 100문 100답을 해보세요!</string>
    <string name="mission_detatil_create_example_title">미션 예시</string>
    <string name="mission_detatil_create_example1">시력</string>
    <string name="mission_detatil_create_example2">아메리카노 vs \n카페라떼</string>
    <string name="mission_detatil_create_btn_text">선택하기</string>
    <string name="mission_detatil_record_title">미션 카테고리 설명</string>
    <string name="mission_detatil_record_game_title">내 연인의 모든것</string>
    <string name="mission_detatil_record_game_description">상대의 취향, 신체 사이즈 등 제시된 주제에 대한 답을 맞추며 서로를 알아가는 게임</string>
    <string name="mission_detatil_record_rule_title">룰 소개</string>
    <string name="mission_detatil_record_rule_description">1. 본인에게 할당된 주제의 답변을 상대방이 맞춰야하는 게임입니다. 2. 단순 주제가 나와있는 미션이라면, 상대의 입장에서 해당 주제에 대한 답을 해주세요. 3. 2지선다로 이루어진 미션이라면, 상대가 어떤 선지를 더 좋아할지에 대해 예상하여 답을 해주세요.</string>
    <string name="mission_detatil_record_tip_title">공략 팁</string>
    <string name="mission_detatil_record_tip_description">• 평소에 하나씩 연인에 대한 셀프 100문 100답을 해보세요!</string>
    <string name="back_button">back_button</string>
    <string name="close_button">close_button</string>
    <string name="next">다음</string>
    <string name="invite_logo">invite logo</string>
    <string name="enter_invite_code">초대코드 입력하기</string>
    <string name="or">or</string>
    <string name="share_invite_code">초대코드 공유하기</string>
    <string name="my_cord">나의 코드</string>
    <string name="example_code">123 456 789</string>
    <string name="check_couple_state">상대 연결 확인하기</string>
    <string name="enter_d_day">두 분의 기념일을 입력하세요</string>
    <string name="when_is_d_day">두 분의 시작일은 언제인가요?</string>
    <string name="please_enter_invite_code">초대코드를 입력하세요</string>
    <string name="connect">연결하기</string>
    <string name="d_day">D+%d</string>
    <string name="nickname_enter">사용할 닉네임을 입력하세요</string>
    <string name="nickname_lover_name">상대가 나를 부르는 애칭은 무엇인가요?</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_ask">문의하기</string>
    <string name="nickname_logout">로그아웃</string>
    <string name="ask_url">https://sparkle-uni.notion.site/eb45a613d2be46a6b11c5111759600b2?pvs=4</string>
    <string name="wish_title">소원권</string>
    <string name="wish_ment_main">남은 소원권을 사용해보세요</string>
    <string name="wish_ment_sub">사용 가능한 소원권이 </string>
    <string name="wish_ment_sub2">개 있어요</string>
    <string name="wish_my_wish">내 소원권</string>
    <string name="wish_your_wish">상대 소원권</string>
    <string name="wish_contour">|</string>
    <string name="wish_coupon_blue">새 소원권 %d개</string>
    <string name="wish_coupon_green">소원권 사용하기</string>
    <string name="wish_coupon_gray">소원권 사용 완료</string>
    <string name="wish_create_wish">소원권 생성하기</string>
    <string name="wish_your_coupon">소원권 보기</string>
    <string name="wish_write_wish">소원 작성하기</string>
    <string name="wish_write_wish_describe">한번 만들어진 소원권은 수정할 수 없어요</string>
    <string name="wish_write_ask">소원을 입력해주세요</string>
    <string name="wish_expiration_period">유효기간</string>
    <string name="wish_expiration_period_value">우리가 사랑할 때까지</string>
    <string name="wish_my_wish_coupon">나의 소원권</string>
    <string name="wish_your_wish_coupon">상대 소원권</string>
    <string name="wish_use_my_ment">나의 소원은</string>
    <string name="wish_use_wish">소원권 사용하기</string>
    <string name="wish_used_subject">소원권 사용 완료!</string>
    <string name="wish_go_home">홈으로 돌아가기</string>
    <string name="wish_empty_my">아직 소원권이 없어요</string>
    <string name="wish_empty_your">아직 상대의 소원권이 없어요</string>
    <string name="new_wish_dialog_title">소원권 만들기를 중단하나요?</string>
    <string name="new_wish_dialog_description">작성된 내용은 저장되지 않아요</string>
    <string name="use_wish_dialog_title">소원권을 사용하나요?</string>
    <string name="use_wish_dialog_description">사용한 소원권은 취소할 수 없어요</string>
    <string name="wish_your">상대가 아직 사용하지 않은 소원권이에요</string>
    <string name="wish_your_used">이미 사용한 소원권이에요</string>
    <string name="wish_used">이미 사용한 소원권입니다</string>
    <string name="your_wish_is">%s의 소원은</string>
    <string name="item_history_emptylist_title">승부 히스토리가 없어요</string>
    <string name="item_history_emptylist_description">연인과 승부를 진행해보세요</string>
    <string name="history_title">승부 히스토리</string>
    <string name="history_detail_mission_fail_text">미션 실패</string>
    <string name="history_detail_my_text">나의 미션</string>
    <string name="history_detail_rival_text">상대의 미션</string>
    <string name="history_detail_mission_success">%s 미션성공</string>
    <string name="history_win">승리</string>
    <string name="history_lose">패배</string>
    <string name="history_draw">무승부</string>
    <string name="history_result_draw_comment">무승부예요</string>
    <string name="history_result_win_comment">%s님이 이겼어요</string>
    <string name="history_result_win">님이 이겼어요</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="google_login">Google계정으로 로그인</string>
    <string name="invite_code_example">ag14f0hkl</string>
    <string name="user_profile">user profile</string>
    <string name="home_couple_score">커플 스코어</string>
    <string name="home_game_history">승부 히스토리</string>
    <string name="home_go_to_history">go to history</string>
    <string name="home_d_100">D+100</string>
    <string name="draw">무</string>
    <string name="lose">패</string>
    <string name="win">승</string>
    <string name="home_game_title">승부하기</string>
    <string name="game_description">승부를 겨루고 소원권을 생성해보세요</string>
    <string name="home_heart">heart</string>
    <string name="home_short_game">한판 승부</string>
    <string name="dialog_cancel_text">취소</string>
    <string name="dialog_apply_text">적용하기</string>
    <string name="dialog_body_text">body</string>
    <string name="dialog_ok_text">확인</string>
    <string name="dialog_title_text">Title</string>
    <string name="update_dialog_title">새로운 버전이 업데이트 되었어요</string>
    <string name="update_dialog_body">새로운 버전으로 업데이트 하시겠습니까?</string>
    <string name="update_dialog_ok">업데이트</string>
    <string name="create_short_game_title">한판승부</string>
    <string name="create_short_game_select_mission">미션 카테고리 선택하기</string>
    <string name="create_short_game_more_script">더보기 버튼을 눌러 설명을 볼 수 있어요</string>
    <string name="create_short_game_wish">소원 작성하기</string>
    <string name="create_short_game_wish_content_hint">이번 승부에 걸 소원을 입력해주세요! \n소원은 지금 정하지 않고 승부가 끝난 뒤에도 작성할 수 있어요</string>
    <string name="create_short_game_btn">한판 승부 만들기</string>
    <string name="label_short_game">SHORT_GAME</string>
    <string name="label_mission_detail">MISSION_DETAIL</string>
    <string name="charactor_over_error_message">글자수를 초과했어요! 소원을 수정해주세요</string>
    <string name="mission_record_title">한판 승부 진행중</string>
    <string name="mission_record_my_mission">나의 미션</string>
    <string name="mission_record_your_mission_script">상대가 미션을 수행하면 공개돼요</string>
    <string name="mission_record_mission_complete">미션 완료</string>
    <string name="mission_record_mission_fail">미션 실패</string>
    <string name="mission_record_stop_game">승부 그만두기</string>
    <string name="on_boarding_image">온보딩 이미지</string>
    <string name="mission_record_game_guide">게임 사용법</string>
    <string name="mission_record_record_play">기록하며 플레이</string>
    <string name="mission_record_memo">메모장</string>
    <string name="mission_record_timer">타이머</string>
    <string name="mission_record_rule">룰 소개</string>
    <string name="mission_record_tip">공략 팁</string>
    <string name="logout_dialog_title">로그아웃 하시겠습니까?</string>
    <string name="logout_message">로그아웃</string>
    <string name="delete_dialog_title">계정을 탈퇴하시겠어요?</string>
    <string name="delete_dialog_descirption">모든 기록이 사라져요</string>
    <string name="delete_message">탈퇴</string>
    <string name="disconnect_dialog_title">정말 커플 연결을 해제하시겠어요?</string>
    <string name="disconnect_dialog_description">해제하면 다시 되돌릴 수 없어요</string>
    <string name="disconnect_message">연결 해제</string>
    <string name="year">"년 "</string>
    <string name="month">"월 "</string>
    <string name="day">일</string>
    <string name="mypage_account_title">계정</string>
    <string name="mypage_account_logout_text">로그아웃</string>
    <string name="mypage_account_delete_text">계정 탈퇴</string>
    <string name="mypage_account_disconnect_text">커플 연결 해제</string>
    <string name="mypage_profil_edit_title">프로필 수정</string>
    <string name="mypage_profil_edit_save">저장</string>
    <string name="mypage_profil_edit_image_change">사진 변경하기</string>
    <string name="mypage_profil_edit_nickname_title">닉네임</string>
    <string name="mypage_profil_edit_errortext_over">글자수를 초과했어요</string>
    <string name="mypage_profil_edit_errortext_zero">닉네임을 입력해주세요</string>
    <string name="mypage_profil_edit_couple_date_title">커플 기념일</string>
    <string name="mypage_setting_title">마이페이지</string>
    <string name="mypage_setting_name">철수</string>
    <string name="mypage_setting_email">uni@gmail.com</string>
    <string name="mypage_setting_profil_edit">프로필 수정</string>
    <string name="mypage_setting_service_title">서비스 이용</string>
    <string name="mypage_setting_service_account_text">계정</string>
    <string name="mypage_setting_service_text">서비스 이용약관</string>
    <string name="mypage_setting_service_privacy_text">개인정보 처리방침</string>
    <string name="mypage_setting_service_opensource_text">오픈소스 라이브러리</string>
    <string name="mypage_setting_service_developer_info_text">개발자 정보</string>
    <string name="mypage_setting_loading_fail_text">정보를 불러오는데 실패하였습니다</string>
    <string name="mypage_setting_myinfo">내정보</string>
    <string name="service_url">https://sparkle-uni.notion.site/5852b2d5f5b24121a4b28b93a8d2e5b6?pvs=4</string>
    <string name="privacy_policy_url">https://sparkle-uni.notion.site/aebe71410014461d85c96851bae1d5cb?pvs=4</string>
    <string name="developer_info_url">https://sparkle-uni.notion.site/00c8ee4d810e411395c7ff26d22dcffd?pvs=4</string>
    <string name="mission_result_title">한판 승부 결과</string>
    <string name="mission_result_my_mission">나의 미션</string>
    <string name="mission_result_your_mission">상대의 미션</string>
    <string name="mission_result_win">멋진 승리네요!</string>
    <string name="mission_result_lose">아쉬운 패배네요</string>
    <string name="mission_result_draw">앗 무승부에요</string>
    <string name="mission_result_undecided">승부 종료 후 히스토리에서 최종 결과를 확인하세요</string>
    <string name="mission_result_go_wish">소원권 조회하러 가기</string>
    <string name="mission_result_go_home">홈으로 돌아가기</string>
    <string name="mission_result_partner_empty_script">상대가 미션을 끝내면\n 승부 히스토리에서\n 확인할 수 있어요</string>
    <string name="mission_result_complete">미션 성공</string>
    <string name="mission_result_failure">미션 실패</string>
    <string name="mission_waiting_result_partner_script">승부가 끝난 뒤\n 공개돼요</string>
    <string name="mission_waiting_result">승부 결과를 기다리고 있어요</string>
    <string name="mission_waiting_partner_result">상대가 결과를 입력하기 전이에요</string>
    <string name="mission_wating_result_go_final_result">최종 결과 확인하기</string>
    <string name="cannot_find_code_information">입력하신 코드 정보를 찾을 수 없어요</string>
    <string name="invite_code_description">초대코드는 상대방로부터 공유받을 수 있어요</string>
</resources>