<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="sopt.uni.presentation.invite.EnterInviteCodeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_invite_code_title"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="77dp"
            android:text="@string/please_enter_invite_code"
            android:textColor="@color/Gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back_arrow" />

        <TextView
            android:id="@+id/tv_invite_code_description"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/invite_code_description"
            android:textColor="@color/Gray_350"
            app:layout_constraintStart_toStartOf="@id/tv_invite_code_title"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_code_title" />

        <EditText
            android:id="@+id/et_invite_code"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/bg_enter_edit_text"
            android:hint="@string/invite_code_example"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:paddingVertical="14dp"
            android:text="@={viewModel.inviteCode}"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_code_description" />

        <TextView
            android:id="@+id/tv_invite_code_error_message"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cannot_find_code_information"
            android:textColor="@color/Red_500"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/et_invite_code"
            app:layout_constraintTop_toBottomOf="@id/et_invite_code" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect"
            style="@style/Btn1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:enabled="@{viewModel.inviteCode.length() > 0}"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_nickname_btn"
            android:stateListAnimator="@null"
            android:text="@string/connect"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>