<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_dismiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back_arrow" />

        <TextView
            android:id="@+id/tv_d_day_title"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="77dp"
            android:text="@string/enter_d_day"
            android:textColor="@color/Gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back_arrow" />

        <TextView
            android:id="@+id/tv_d_day_description"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/when_is_d_day"
            android:textColor="@color/Gray_350"
            app:layout_constraintStart_toStartOf="@id/tv_d_day_title"
            app:layout_constraintTop_toBottomOf="@id/tv_d_day_title" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_marginTop="30dp"
            android:maxDate="07/14/2023"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_d_day_description"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/Btn1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_nickname_btn"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>