<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_mission_detail_textbox">

        <TextView
            android:id="@+id/dialog_title"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_title_text"
            android:textColor="@color/Gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_body"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/dialog_body_text"
            android:textColor="@color/Gray_400"
            app:layout_constraintBottom_toTopOf="@+id/btn_right"
            app:layout_constraintStart_toStartOf="@+id/dialog_title"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <TextView
            android:id="@+id/btn_left"
            style="@style/Body1_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="7dp"
            android:text="@string/dialog_cancel_text"
            android:textColor="@color/Lightblue_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_right"
            app:layout_constraintTop_toBottomOf="@+id/dialog_body" />

        <TextView
            android:id="@+id/btn_right"
            style="@style/Btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="7dp"
            android:text="@string/dialog_ok_text"
            android:textColor="@color/Lightblue_600"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>