<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_share_card"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginTop="216dp"
            android:contentDescription="@string/invite_logo"
            android:src="@drawable/sparkle_simbol"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_my_code"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/bg_my_cord"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/my_cord"
            android:textColor="@color/Lightblue_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_share_card" />

        <TextView
            android:id="@+id/tv_invite_code"
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/example_code"
            android:textColor="@color/Lightblue_950"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_code" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_copy_invite_code"
            style="@style/Btn1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_nickname_btn"
            android:stateListAnimator="@null"
            android:text="@string/copy_invite_code"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/btn_check_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check_connection"
            style="@style/Btn1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_enter_invite_code_btn"
            android:drawableStart="@drawable/ic_arrow_reset"
            android:drawableTint="@color/Lightblue_600"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="100dp"
            android:stateListAnimator="@null"
            android:text="@string/check_couple_state"
            android:textColor="@color/Lightblue_600"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>