<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginTop="206dp"
            android:contentDescription="@string/invite_logo"
            android:src="@drawable/ic_onboarding"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send_invite_cod"
            style="@style/Btn1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_nickname_btn"
            android:text="@string/share_invite_code"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="11dp"
            android:background="@color/Gray_200"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/or"
            android:textColor="@color/Lightblue_700"
            app:layout_constraintBottom_toTopOf="@id/btn_enter_invite_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="16dp"
            android:background="@color/Gray_200"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter_invite_code"
            style="@style/Btn1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_enter_invite_code_btn"
            android:text="@string/enter_invite_code"
            android:textColor="@color/Lightblue_600"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>